--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <p>Passionate Computer Science Undergrad | Competitive Programmer | Software Engineer</p>
                 <div class="btn-box">
                     <a href="#contact" class="btn">Hire Me</a>
-                    <a href="https://drive.google.com/file/d/17HqX-gPiai7iiWHXspJ9xL-pCgDADJZq/view?usp=sharing" class="btn" target="_blank">View CV</a>
+                    <a href="https://drive.google.com/file/d/1N_HAKkH1XWJayNI4-QrDMn6GyIn9J_BT/view?usp=drivesdk" class="btn" target="_blank">View CV</a>
                 </div>
             </div>
     
